--- a/App/View/User/importUser.phtml
+++ b/App/View/User/importUser.phtml
@@ -28,7 +28,7 @@ $this->setTitle('Nhập tài khoản từ Excel');
         Hướng dẫn:<br>
         <ul>
             <li>Trường có dấu &#10033; bắt buộc nhập</li>
-            <li><strong>depFk</strong> nhập theo dạng "tên [id]", vd: Hành chính [3]</li>
+            <li><strong>depID</strong> nhập theo dạng "tên [id]", vd: Hành chính [3]</li>
             <li><strong>groups</strong> có thể nhập nhiều id nhóm, tách nhau bằng dấu "phẩy" hoặc xuống dòng</li>
             <li><strong>permissions</strong> có thể nhập nhiều quyền, tách nhau bằng dấu "phẩy" hoặc xuống dòng</li>
         </ul>
